packages/spl-directive/src/main/antlr/SPLParser.ts
// Generated from src/main/antlr/SPL.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from 'antlr4ts/atn/ATN'
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer'
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException'
import { NotNull } from 'antlr4ts/Decorators'
import { NoViableAltException } from 'antlr4ts/NoViableAltException'
import { Override } from 'antlr4ts/Decorators'
import { Parser } from 'antlr4ts/Parser'
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext'
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator'
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener'
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor'
import { RecognitionException } from 'antlr4ts/RecognitionException'
import { RuleContext } from 'antlr4ts/RuleContext'
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode'
import { Token } from 'antlr4ts/Token'
import { TokenStream } from 'antlr4ts/TokenStream'
import { Vocabulary } from 'antlr4ts/Vocabulary'
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl'

import * as Utils from 'antlr4ts/misc/Utils'

import { SPLListener } from './SPLListener'
import { SPLVisitor } from './SPLVisitor'

export class SPLParser extends Parser {
  public static readonly T__0 = 1
  public static readonly T__1 = 2
  public static readonly T__2 = 3
  public static readonly T__3 = 4
  public static readonly T__4 = 5
  public static readonly T__5 = 6
  public static readonly T__6 = 7
  public static readonly T__7 = 8
  public static readonly T__8 = 9
  public static readonly T__9 = 10
  public static readonly T__10 = 11
  public static readonly T__11 = 12
  public static readonly ORDER = 13
  public static readonly OPERATOR = 14
  public static readonly PRIO_OPERATION = 15
  public static readonly OPERATION = 16
  public static readonly XOR_OPERATOR = 17
  public static readonly OR_OPERATOR = 18
  public static readonly AND_OPERATOR = 19
  public static readonly COMPARATOR = 20
  public static readonly STRING = 21
  public static readonly SINGLE_STRING = 22
  public static readonly DOUBLE_STRING = 23
  public static readonly BOOL = 24
  public static readonly NULL = 25
  public static readonly FUNCTION_NAME = 26
  public static readonly IDENTIFIER = 27
  public static readonly DATE = 28
  public static readonly INTEGER = 29
  public static readonly FLOAT = 30
  public static readonly WS = 31
  public static readonly COMMENT = 32
  public static readonly RULE_query = 0
  public static readonly RULE_predicate_member = 1
  public static readonly RULE_predicate = 2
  public static readonly RULE_sorter = 3
  public static readonly RULE_limiter = 4
  public static readonly RULE_start_page = 5
  public static readonly RULE_number_per_page = 6
  public static readonly RULE_sort_rule = 7
  public static readonly RULE_order = 8
  public static readonly RULE_operand = 9
  public static readonly RULE_comparator = 10
  public static readonly RULE_operator = 11
  public static readonly RULE_operation = 12
  public static readonly RULE_prioOperation = 13
  public static readonly RULE_fieldName = 14
  public static readonly RULE_function_evaluation = 15
  public static readonly RULE_identifier = 16
  public static readonly RULE_value = 17
  public static readonly RULE_list = 18
  public static readonly RULE_integerValue = 19
  public static readonly RULE_variable = 20
  public static readonly RULE_primitiveValue = 21
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'query',
    'predicate_member',
    'predicate',
    'sorter',
    'limiter',
    'start_page',
    'number_per_page',
    'sort_rule',
    'order',
    'operand',
    'comparator',
    'operator',
    'operation',
    'prioOperation',
    'fieldName',
    'function_evaluation',
    'identifier',
    'value',
    'list',
    'integerValue',
    'variable',
    'primitiveValue'
  ]

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'('",
    "')'",
    "'SORT'",
    "'ORDER'",
    "'BY'",
    "','",
    "'LIMIT'",
    "'.'",
    "'?'",
    "'['",
    "']'",
    "':'",
    undefined,
    undefined,
    undefined,
    undefined,
    "'XOR'",
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "'null'"
  ]
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    'ORDER',
    'OPERATOR',
    'PRIO_OPERATION',
    'OPERATION',
    'XOR_OPERATOR',
    'OR_OPERATOR',
    'AND_OPERATOR',
    'COMPARATOR',
    'STRING',
    'SINGLE_STRING',
    'DOUBLE_STRING',
    'BOOL',
    'NULL',
    'FUNCTION_NAME',
    'IDENTIFIER',
    'DATE',
    'INTEGER',
    'FLOAT',
    'WS',
    'COMMENT'
  ]
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    SPLParser._LITERAL_NAMES,
    SPLParser._SYMBOLIC_NAMES,
    []
  )

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return SPLParser.VOCABULARY
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return 'SPL.g4'
  }

  // @Override
  public get ruleNames(): string[] {
    return SPLParser.ruleNames
  }

  // @Override
  public get serializedATN(): string {
    return SPLParser._serializedATN
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message)
  }

  constructor(input: TokenStream) {
    super(input)
    this._interp = new ParserATNSimulator(SPLParser._ATN, this)
  }
  // @RuleVersion(0)
  public query(): QueryContext {
    let _localctx: QueryContext = new QueryContext(this._ctx, this.state)
    this.enterRule(_localctx, 0, SPLParser.RULE_query)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 45
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (
          (_la & ~0x1f) === 0 &&
          ((1 << _la) &
            ((1 << SPLParser.T__0) |
              (1 << SPLParser.T__9) |
              (1 << SPLParser.T__11) |
              (1 << SPLParser.STRING) |
              (1 << SPLParser.BOOL) |
              (1 << SPLParser.NULL) |
              (1 << SPLParser.FUNCTION_NAME) |
              (1 << SPLParser.IDENTIFIER) |
              (1 << SPLParser.DATE) |
              (1 << SPLParser.INTEGER) |
              (1 << SPLParser.FLOAT))) !==
            0
        ) {
          {
            this.state = 44
            this.predicate(0)
          }
        }

        this.state = 48
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === SPLParser.T__2 || _la === SPLParser.T__3) {
          {
            this.state = 47
            this.sorter()
          }
        }

        this.state = 51
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === SPLParser.T__6) {
          {
            this.state = 50
            this.limiter()
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public predicate_member(): Predicate_memberContext {
    let _localctx: Predicate_memberContext = new Predicate_memberContext(this._ctx, this.state)
    this.enterRule(_localctx, 2, SPLParser.RULE_predicate_member)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 53
        this.operand(0)
        this.state = 54
        this.comparator()
        this.state = 55
        this.operand(0)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }

  public predicate(): PredicateContext
  public predicate(_p: number): PredicateContext
  // @RuleVersion(0)
  public predicate(_p?: number): PredicateContext {
    if (_p === undefined) {
      _p = 0
    }

    let _parentctx: ParserRuleContext = this._ctx
    let _parentState: number = this.state
    let _localctx: PredicateContext = new PredicateContext(this._ctx, _parentState)
    let _prevctx: PredicateContext = _localctx
    let _startState: number = 4
    this.enterRecursionRule(_localctx, 4, SPLParser.RULE_predicate, _p)
    try {
      let _alt: number
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 63
        this._errHandler.sync(this)
        switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
          case 1:
            {
              this.state = 58
              this.predicate_member()
            }
            break

          case 2:
            {
              this.state = 59
              this.match(SPLParser.T__0)
              this.state = 60
              _localctx._subPredicate = this.predicate(0)
              this.state = 61
              this.match(SPLParser.T__1)
            }
            break
        }
        this._ctx._stop = this._input.tryLT(-1)
        this.state = 71
        this._errHandler.sync(this)
        _alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx)
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            if (this._parseListeners != null) {
              this.triggerExitRuleEvent()
            }
            _prevctx = _localctx
            {
              {
                _localctx = new PredicateContext(_parentctx, _parentState)
                this.pushNewRecursionContext(_localctx, _startState, SPLParser.RULE_predicate)
                this.state = 65
                if (!this.precpred(this._ctx, 3)) {
                  throw this.createFailedPredicateException('this.precpred(this._ctx, 3)')
                }
                this.state = 66
                this.operator()
                this.state = 67
                this.predicate(4)
              }
            }
          }
          this.state = 73
          this._errHandler.sync(this)
          _alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.unrollRecursionContexts(_parentctx)
    }
    return _localctx
  }
  // @RuleVersion(0)
  public sorter(): SorterContext {
    let _localctx: SorterContext = new SorterContext(this._ctx, this.state)
    this.enterRule(_localctx, 6, SPLParser.RULE_sorter)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 74
        _la = this._input.LA(1)
        if (!(_la === SPLParser.T__2 || _la === SPLParser.T__3)) {
          this._errHandler.recoverInline(this)
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true
          }

          this._errHandler.reportMatch(this)
          this.consume()
        }
        this.state = 75
        this.match(SPLParser.T__4)
        this.state = 76
        this.sort_rule()
        this.state = 81
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === SPLParser.T__5) {
          {
            {
              this.state = 77
              this.match(SPLParser.T__5)
              this.state = 78
              this.sort_rule()
            }
          }
          this.state = 83
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public limiter(): LimiterContext {
    let _localctx: LimiterContext = new LimiterContext(this._ctx, this.state)
    this.enterRule(_localctx, 8, SPLParser.RULE_limiter)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 84
        this.match(SPLParser.T__6)
        this.state = 85
        this.operand(0)
        this.state = 88
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === SPLParser.T__5) {
          {
            this.state = 86
            this.match(SPLParser.T__5)
            this.state = 87
            this.operand(0)
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public start_page(): Start_pageContext {
    let _localctx: Start_pageContext = new Start_pageContext(this._ctx, this.state)
    this.enterRule(_localctx, 10, SPLParser.RULE_start_page)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 90
        this.match(SPLParser.INTEGER)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public number_per_page(): Number_per_pageContext {
    let _localctx: Number_per_pageContext = new Number_per_pageContext(this._ctx, this.state)
    this.enterRule(_localctx, 12, SPLParser.RULE_number_per_page)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 92
        this.match(SPLParser.INTEGER)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public sort_rule(): Sort_ruleContext {
    let _localctx: Sort_ruleContext = new Sort_ruleContext(this._ctx, this.state)
    this.enterRule(_localctx, 14, SPLParser.RULE_sort_rule)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 94
        this.operand(0)
        this.state = 96
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === SPLParser.ORDER) {
          {
            this.state = 95
            this.order()
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public order(): OrderContext {
    let _localctx: OrderContext = new OrderContext(this._ctx, this.state)
    this.enterRule(_localctx, 16, SPLParser.RULE_order)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 98
        this.match(SPLParser.ORDER)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }

  public operand(): OperandContext
  public operand(_p: number): OperandContext
  // @RuleVersion(0)
  public operand(_p?: number): OperandContext {
    if (_p === undefined) {
      _p = 0
    }

    let _parentctx: ParserRuleContext = this._ctx
    let _parentState: number = this.state
    let _localctx: OperandContext = new OperandContext(this._ctx, _parentState)
    let _prevctx: OperandContext = _localctx
    let _startState: number = 18
    this.enterRecursionRule(_localctx, 18, SPLParser.RULE_operand, _p)
    try {
      let _alt: number
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 109
        this._errHandler.sync(this)
        switch (this._input.LA(1)) {
          case SPLParser.T__11:
            {
              this.state = 101
              this.variable()
            }
            break
          case SPLParser.IDENTIFIER:
            {
              this.state = 102
              this.fieldName()
            }
            break
          case SPLParser.FUNCTION_NAME:
            {
              this.state = 103
              this.function_evaluation()
            }
            break
          case SPLParser.T__9:
          case SPLParser.STRING:
          case SPLParser.BOOL:
          case SPLParser.NULL:
          case SPLParser.DATE:
          case SPLParser.INTEGER:
          case SPLParser.FLOAT:
            {
              this.state = 104
              this.value()
            }
            break
          case SPLParser.T__0:
            {
              this.state = 105
              this.match(SPLParser.T__0)
              this.state = 106
              _localctx._subOperand = this.operand(0)
              this.state = 107
              this.match(SPLParser.T__1)
            }
            break
          default:
            throw new NoViableAltException(this)
        }
        this._ctx._stop = this._input.tryLT(-1)
        this.state = 121
        this._errHandler.sync(this)
        _alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx)
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            if (this._parseListeners != null) {
              this.triggerExitRuleEvent()
            }
            _prevctx = _localctx
            {
              this.state = 119
              this._errHandler.sync(this)
              switch (this.interpreter.adaptivePredict(this._input, 9, this._ctx)) {
                case 1:
                  {
                    _localctx = new OperandContext(_parentctx, _parentState)
                    this.pushNewRecursionContext(_localctx, _startState, SPLParser.RULE_operand)
                    this.state = 111
                    if (!this.precpred(this._ctx, 7)) {
                      throw this.createFailedPredicateException('this.precpred(this._ctx, 7)')
                    }
                    {
                      this.state = 112
                      this.prioOperation()
                    }
                    this.state = 113
                    this.operand(8)
                  }
                  break

                case 2:
                  {
                    _localctx = new OperandContext(_parentctx, _parentState)
                    this.pushNewRecursionContext(_localctx, _startState, SPLParser.RULE_operand)
                    this.state = 115
                    if (!this.precpred(this._ctx, 6)) {
                      throw this.createFailedPredicateException('this.precpred(this._ctx, 6)')
                    }
                    {
                      this.state = 116
                      this.operation()
                    }
                    this.state = 117
                    this.operand(7)
                  }
                  break
              }
            }
          }
          this.state = 123
          this._errHandler.sync(this)
          _alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.unrollRecursionContexts(_parentctx)
    }
    return _localctx
  }
  // @RuleVersion(0)
  public comparator(): ComparatorContext {
    let _localctx: ComparatorContext = new ComparatorContext(this._ctx, this.state)
    this.enterRule(_localctx, 20, SPLParser.RULE_comparator)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 124
        this.match(SPLParser.COMPARATOR)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public operator(): OperatorContext {
    let _localctx: OperatorContext = new OperatorContext(this._ctx, this.state)
    this.enterRule(_localctx, 22, SPLParser.RULE_operator)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 126
        this.match(SPLParser.OPERATOR)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public operation(): OperationContext {
    let _localctx: OperationContext = new OperationContext(this._ctx, this.state)
    this.enterRule(_localctx, 24, SPLParser.RULE_operation)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 128
        this.match(SPLParser.OPERATION)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public prioOperation(): PrioOperationContext {
    let _localctx: PrioOperationContext = new PrioOperationContext(this._ctx, this.state)
    this.enterRule(_localctx, 26, SPLParser.RULE_prioOperation)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 130
        this.match(SPLParser.PRIO_OPERATION)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public fieldName(): FieldNameContext {
    let _localctx: FieldNameContext = new FieldNameContext(this._ctx, this.state)
    this.enterRule(_localctx, 28, SPLParser.RULE_fieldName)
    try {
      let _alt: number
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 132
        this.identifier()
        this.state = 140
        this._errHandler.sync(this)
        _alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx)
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            {
              {
                this.state = 133
                this.match(SPLParser.T__7)
                this.state = 134
                this.identifier()
                this.state = 136
                this._errHandler.sync(this)
                switch (this.interpreter.adaptivePredict(this._input, 11, this._ctx)) {
                  case 1:
                    {
                      this.state = 135
                      this.match(SPLParser.T__8)
                    }
                    break
                }
              }
            }
          }
          this.state = 142
          this._errHandler.sync(this)
          _alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public function_evaluation(): Function_evaluationContext {
    let _localctx: Function_evaluationContext = new Function_evaluationContext(
      this._ctx,
      this.state
    )
    this.enterRule(_localctx, 30, SPLParser.RULE_function_evaluation)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 143
        this.match(SPLParser.FUNCTION_NAME)
        this.state = 144
        this.match(SPLParser.T__0)
        this.state = 159
        this._errHandler.sync(this)
        switch (this.interpreter.adaptivePredict(this._input, 15, this._ctx)) {
          case 1:
            {
              {
                this.state = 145
                this.operand(0)
                this.state = 150
                this._errHandler.sync(this)
                _la = this._input.LA(1)
                while (_la === SPLParser.T__5) {
                  {
                    {
                      this.state = 146
                      this.match(SPLParser.T__5)
                      this.state = 147
                      this.operand(0)
                    }
                  }
                  this.state = 152
                  this._errHandler.sync(this)
                  _la = this._input.LA(1)
                }
              }
            }
            break
